--- a/static/css/me.css
+++ b/static/css/me.css
@@ -82,6 +82,12 @@ body{
     margin: auto !important;
 }
 
+/*------shadow--------*/
+.m-shadow-small{
+    -webkit-box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2) !important;
+}
+
 /*-----------margin-----------*/
 .m-margin-pd-tiny{
     margin-top: 0.3em!important;
@@ -125,6 +131,10 @@ body{
         display: block !important;
     }
     .m-padded-lr-responsive{
+        padding-left: 0!important;
+        padding-right: 0!important;
+    }
+    .m-mobile-lr-clear{
         padding-left: 0!important;
         padding-right: 0!important;
     }
